overhaul for nonni.dev

--- a/src/content/example.mdx
+++ b/src/content/example.mdx
@@ -497,13 +497,13 @@ Refer the below screenshots to test the API using Postman.
 
 
 You might seen different response format in the Postman as compared to the screenshot above, as I've formatted response. If you want to 
-learn how to format the response in NestJS, you can refer to my previous article on [Format Nest.js Response using Interceptors](https://adarsha.dev/blog/format-nestjs-response).
+learn how to format the response in NestJS, you can refer to my previous article on [Format Nest.js Response using Interceptors]().
 
 ---
 
 
 ## Conclusion
 
-The complete implementation of the DMS module can be found [here](https://github.com/adarshaacharya/bricks/tree/main/src/dms) for reference.
+The complete implementation of the DMS module can be found [here](https://github.com/bnonni) for reference.
 
-If you have any questions or feedback, feel free to reach out to me on [X.com](https://x.com/adarsha_ach) / [Linkedin](https://www.linkedin.com/in/adarshaacharya/) or comment below.
+If you have any questions or feedback, feel free to reach out to me on [X.com](https://x.com/n0nstr) / [Linkedin](https://www.linkedin.com/in/bnonni/) or comment below.
